k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keystone
  labels:
    app.kubernetes.io/name: keystone
    app.kubernetes.io/part-of: hilbras
