k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keystone
  namespace: keystone
  labels:
    app.kubernetes.io/name: keystone
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keystone
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
